# sise

./: .gitignore  node.py  parser.py  sprawqo.docx  ~$prawqo.docx
CPP/: CMakeLists.txt  in.txt
CPP/src/: Astr.h  BFS.h  DFS.h  Graph.cpp  Graph.h  Node.cpp  Node.h  NodeHelper.cpp  NodeHelper.h  Solutions.cpp  Solutions.h  Util.cpp  Util.h  main.cpp  typedefs.h
JAVA/: in.txt  pom.xml  stats.txt
JAVA/in/: runprog.ps1
JAVA/stats/: 4x4_01_00001_astr_hamm_stats.txt  4x4_01_00001_astr_manh_stats.txt  4x4_01_00001_bfs_drlu_stats.txt  4x4_01_00001_bfs_drul_stats.txt  4x4_01_00001_bfs_ludr_stats.txt  4x4_01_00001_bfs_lurd_stats.txt  4x4_01_00001_bfs_rdlu_stats.txt  4x4_01_00001_bfs_rdul_stats.txt  4x4_01_00001_bfs_uldr_stats.txt  4x4_01_00001_bfs_ulrd_stats.txt  4x4_01_00001_dfs_drlu_stats.txt  4x4_01_00001_dfs_drul_stats.txt  4x4_01_00001_dfs_ludr_stats.txt  4x4_01_00001_dfs_lurd_stats.txt  4x4_01_00001_dfs_rdlu_stats.txt  4x4_01_00001_dfs_rdul_stats.txt  4x4_01_00001_dfs_uldr_stats.txt  4x4_01_00001_dfs_ulrd_stats.txt  4x4_01_00002_astr_hamm_stats.txt  4x4_01_00002_astr_manh_stats.txt  4x4_01_00002_bfs_drlu_stats.txt  4x4_01_00002_bfs_drul_stats.txt  4x4_01_00002_bfs_ludr_stats.txt  4x4_01_00002_bfs_lurd_stats.txt  4x4_01_00002_bfs_rdlu_stats.txt  4x4_01_00002_bfs_rdul_stats.txt  4x4_01_00002_bfs_uldr_stats.txt  4x4_01_00002_bfs_ulrd_stats.txt  4x4_01_00002_dfs_drlu_stats.txt  4x4_01_00002_dfs_drul_stats.txt  4x4_01_00002_dfs_ludr_stats.txt  4x4_01_00002_dfs_lurd_stats.txt  (+7409 more)
pyton wykresy/: main.py  summary.txt  wykresy2.rgba
pytong/: main.py  node.py
(+8 files in other folders)
